--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "homepage": ".",
   "name": "practice-react-testing",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
